<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">SZDialer</string>
	<string name="numbers"></string>
	
	
	<string name="menu_settings">Settings</string>
    <string name="title_change_digits_color">Change digits color</string>
    <string name="title_digits_color_pressed">Digits color (pressed)</string>
    <string name="title_digits_color_focused">Digits color (focused)</string>
    <string name="title_digits_color_unselected">Digits color (not selected)</string>
    <string name="title_choose_color">Choose a color</string>
    <string name="title_use_custom_color">Use custom digits colors</string>
    <string name="summaryon_custom_color">Supported formats: #RRGGBB or #AARRGGBB. Input the # as well.</string>
    
    <string name="category_dialer">Dialer</string>
    <string name="title_enable_dial_tone">Enable dial tone</string>
    <string name="title_enable_haptic_feedback">Enable haptic feedback</string>
    <string name="title_show_contact_pictures">Show contact pictures</string>
    <string name="title_hide_dialpad_on_fling">Auto-hide dialpad on fling</string>
    
    <string name="category_smart_dial">T9 Search</string>
	<string name="title_matched_italics">Italicize matched names</string>
	<string name="title_matched_bold">Bold matched names</string>
	<string name="title_matched_colour">Colourize matched names</string>
	<string name="title_choose_colour">Choose colourize colour</string>
	<string name="title_matched_highlight">Highlight matched names</string>
	<string name="title_choose_highlight">Choose highlight colour</string>
	<string name="title_match_num_seq">Match number sequence anywhere</string>
	<string name="summaryon_match_num_seq">Number sequences will be matched anywhere</string>
	<string name="summaryoff_match_num_seq">Number sequences will be matched from first digit</string>
	
	<string name="title_misc_category">Miscellaneous</string>
	
	<!-- Wysie: Menu strings -->
	<string name="menu_new_contacts">Add new contact</string>
	<string name="menu_add_contacts">Add to contacts</string>
	<string name="menu_call_log">Call log</string>
	<string name="menu_contacts">Contacts</string>
	<string name="menu_favs">Favourites</string>
	
	<!-- Wysie: Context menu -->
	<string name="context_sms">Text contact</string>
	
    <!-- Wysie: About strings -->    
    <string name="title_about">About</string>
    <string name="title_about_name">Application Name</string>
    <string name="summary_about_name">SZDialer</string>
    <string name="title_about_author">Developed By</string>
    <string name="summary_about_author">Joshua Seidel</string>
    <string name="title_about_credits">Based On</string>
    <string name="summary_about_credits">NumbDial</string>
    <string name="title_about_source">Source Code</string>
    <string name="summary_about_source">https://github.com/Savaged-Zen/platform_packages_apps_SZDialer</string>
    <string name="title_basic_usage">Basic Usage</string>
	<string name="summary_basic_usage">Fling down on the dialpad area to hide it, fling up to show it. Use # for spaces in name.</string>
</resources>
